Use Java 17 constructs