@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,7 +20,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.spring.initializr.generator.project.contributor.ProjectContributor;
 
@@ -58,7 +57,7 @@ public class DefaultProjectAssetGenerator implements ProjectAssetGenerator<Path>
 		Path projectRoot = resolveProjectDirectoryFactory(context).createProjectDirectory(description);
 		Path projectDirectory = initializerProjectDirectory(projectRoot, description);
 		List<ProjectContributor> contributors = context.getBeanProvider(ProjectContributor.class).orderedStream()
-				.collect(Collectors.toList());
+				.toList();
 		for (ProjectContributor contributor : contributors) {
 			contributor.contribute(projectDirectory);
 		}
